# pyspark-anomaly-detection

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_pipeline.py
config/: spark_config.py
data/interim/transactions/year=2023/month=1/: .part-00000-a99351c6-2cf8-44a8-b0fb-f237610b26a1.c000.snappy.parquet.crc  .part-00001-a99351c6-2cf8-44a8-b0fb-f237610b26a1.c000.snappy.parquet.crc  .part-00002-a99351c6-2cf8-44a8-b0fb-f237610b26a1.c000.snappy.parquet.crc  .part-00003-a99351c6-2cf8-44a8-b0fb-f237610b26a1.c000.snappy.parquet.crc  .part-00004-a99351c6-2cf8-44a8-b0fb-f237610b26a1.c000.snappy.parquet.crc  .part-00005-a99351c6-2cf8-44a8-b0fb-f237610b26a1.c000.snappy.parquet.crc  .part-00006-a99351c6-2cf8-44a8-b0fb-f237610b26a1.c000.snappy.parquet.crc  .part-00007-a99351c6-2cf8-44a8-b0fb-f237610b26a1.c000.snappy.parquet.crc  .part-00008-a99351c6-2cf8-44a8-b0fb-f237610b26a1.c000.snappy.parquet.crc  .part-00009-a99351c6-2cf8-44a8-b0fb-f237610b26a1.c000.snappy.parquet.crc  part-00000-a99351c6-2cf8-44a8-b0fb-f237610b26a1.c000.snappy.parquet  part-00001-a99351c6-2cf8-44a8-b0fb-f237610b26a1.c000.snappy.parquet  part-00002-a99351c6-2cf8-44a8-b0fb-f237610b26a1.c000.snappy.parquet  part-00003-a99351c6-2cf8-44a8-b0fb-f237610b26a1.c000.snappy.parquet  part-00004-a99351c6-2cf8-44a8-b0fb-f237610b26a1.c000.snappy.parquet  part-00005-a99351c6-2cf8-44a8-b0fb-f237610b26a1.c000.snappy.parquet  (+4 more)
src/data/: gold.py  ingestion.py  ingestion_pyspark.py  schemas.py  silver.py
src/features/: build_features.py
src/models/: predict.py  train.py
src/utils/: data_quality.py
(+246 files in other folders)
