[tool.poetry]
name = "financial-anomaly-pipeline"
version = "0.1.0"
description = "A scalable pipeline for detecting financial anomalies using PySpark and MLflow."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.5.0"
mlflow = "^2.11.0"
great-expectations = "^0.18.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.2.0"
isort = "^5.13.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
